# media-analysis

./: README.md  main.py  pyproject.toml
data/: sites_rss_list.txt
src/: __init__.py  main.py  misc.py  rss_utils.py
src/apis/: __init__.py  retrieve_data.py
src/libs/: __init__.py  elastic_methods.py  rss_methods.py
src/libs/rss/: __init__.py  elastic_methods.py  rss_methods.py
src/templates/: index.html  results.html
src/utils/: __init__.py  elastic_utils.py  rss_utils.py  xml_to_json_utils.py
