[tool.poetry]
name = "media-analysis"
version = "1.0"
description = "Project for media analysis"
authors = ["KyrBl"]
packages = [
  { include = "src" },
  { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "5.10.1"
mypy = "0.931"

[build-system]
requires = ["poetry-core=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true